--- a/web/index.html
+++ b/web/index.html
@@ -34,5 +34,7 @@
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
-</body>
+  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth.js"></script>
+</body> 
 </html>
